--- a/TWM/TWM.AngularClient/TWM/src/app/mycountries/my-country-thumbnail/my-country-thumbnail.component.html
+++ b/TWM/TWM.AngularClient/TWM/src/app/mycountries/my-country-thumbnail/my-country-thumbnail.component.html
@@ -1,3 +1,8 @@
+<div>
+
+
+<img src="assets/svgmaps/{{country.alpha3Code | lowercase}}.svg">
 <p>
-    {{country.name}}
+  {{country.name}} - {{country.regionName}}
 </p>
+</div>
