--- a/TWM/TWM.AngularClient/TWM/src/app/header/header.component.html
+++ b/TWM/TWM.AngularClient/TWM/src/app/header/header.component.html
@@ -12,20 +12,20 @@
         <a class="nav-link waves-light" mdbWavesEffect><mdb-icon fas icon="envelope"></mdb-icon> Contact<span class="sr-only">(current)</span></a>
       </li>
 
-      <li class="nav-item" *ngIf="openIdConnectService.userAvailable">
+      <li *ngIf="isLoggedIn()" class="nav-item">
         <a class="nav-link waves-light" mdbWavesEffect><mdb-icon fas icon="cog"></mdb-icon> Settings</a>
       </li>
 
 
       <!-- Dropdown -->
-      <li class="nav-item dropdown" dropdown *ngIf="openIdConnectService.userAvailable">
+      <li *ngIf="isLoggedIn()" class="nav-item dropdown" dropdown >
         <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
           <mdb-icon fas icon="user"></mdb-icon> Profile<span class="caret"></span>
         </a>
         <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
           <a class="dropdown-item waves-light" mdbWavesEffect href="">My account</a>
 
-          <a (click)="openIdConnectService.triggerSignOut()" class="dropdown-item waves-light" mdbWavesEffect>Log out</a>
+          <a (click)="logout()" class="dropdown-item waves-light" mdbWavesEffect>Log out</a>
 
         </div>
 
