Continent divison for MyCountries

--- a/TWM/TWM.AngularClient/TWM/src/app/mycountries/my-country-thumbnail/my-country-thumbnail.component.html
+++ b/TWM/TWM.AngularClient/TWM/src/app/mycountries/my-country-thumbnail/my-country-thumbnail.component.html
@@ -3,6 +3,6 @@
 
 <img src="assets/svgmaps/{{country.alpha3Code | lowercase}}.svg">
 <p>
-  {{country.name}} - {{country.regionName}}
+  {{country.name}}
 </p>
 </div>
