--- a/TWM/TWM.AngularClient/TWM/src/app/mycountries/root/root.component.html
+++ b/TWM/TWM.AngularClient/TWM/src/app/mycountries/root/root.component.html
@@ -1,7 +1,8 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-2">
-            <app-my-country-list></app-my-country-list>
+            <!--<app-my-country-list></app-my-country-list>-->
+            <app-my-continent-list></app-my-continent-list>
         </div>
         <div class="col-10">
             <mdb-accordion>
