--- a/TWM/TWM.AngularClient/TWM/src/app/mycountries/my-country-thumbnail/my-country-thumbnail.component.html
+++ b/TWM/TWM.AngularClient/TWM/src/app/mycountries/my-country-thumbnail/my-country-thumbnail.component.html
@@ -1,8 +1,8 @@
-<div>
+<div class="country-body btn-block">
 
 
-<img src="assets/svgmaps/{{country.alpha3Code | lowercase}}.svg">
-<p>
-  {{country.name}}
-</p>
+<img class="left" src="assets/svgmaps/{{country.alpha3Code | lowercase}}.svg">
+<div class="right text">
+  <p> {{country.name}} </p>
+</div>
 </div>
