--- a/TWM/TWM.AngularClient/TWM/src/app/mycountries/my-country-thumbnail/my-country-thumbnail.component.scss
+++ b/TWM/TWM.AngularClient/TWM/src/app/mycountries/my-country-thumbnail/my-country-thumbnail.component.scss
@@ -1,6 +1,24 @@
 img {
   width: 45px;
   height: auto;
-  padding-top: 1px;
-  padding-bottom: 1px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.right {
+  
+  height: 34px;
+}
+
+
+.left {
+  float: left;
+  padding-left: 3px;
+  margin-right: 6px;
+}
+
+.country-body {
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
 }
