Region-Details View

--- a/TWM/TWM.AngularClient/TWM/src/app/mycountries/my-continents-list/my-continent-list.component.html
+++ b/TWM/TWM.AngularClient/TWM/src/app/mycountries/my-continents-list/my-continent-list.component.html
@@ -6,18 +6,20 @@
   <hr />
   <div class="scrollbar scrollbar-info">
     <div class="force-overflow">
-      <div class="card bg-light trip-container" *ngFor="let continent of myCountries">
+      <div class="card bg-light continent-container" *ngFor="let continent of myCountries">
 
         <div class="card-header text-lg-center continent-header">
               {{continent.name}}
         </div>
         <div *ngFor="let region of continent.regions" class="card trip-container">
-          <p *ngIf="region.countries && region.countries.length" class=" card-header">{{region.name}}</p>
+          <p class=" card-header region-name btn">
+            <!--*ngIf="region.countries && region.countries.length"-->
+            {{region.name}}  {{region.visitedCountryCount}}/{{region.totalCountryCount}}
+          </p>
           <div *ngFor="let country of region.countries">
             <app-my-country-thumbnail [country]="country"></app-my-country-thumbnail>
           </div>
         </div>
-        
       </div>
     </div>
   </div>
