--- a/TWM/TWM.AngularClient/TWM/src/app/mycountries/my-continents-list/my-continent-list.component.scss
+++ b/TWM/TWM.AngularClient/TWM/src/app/mycountries/my-continents-list/my-continent-list.component.scss
@@ -1,3 +1,15 @@
 .continent-header{
-  font-weight:bolder
+  font-weight:bolder;
+  padding: 6px;
 }
+
+.region-name {
+  font-size: 14px;
+  font-weight: bold;
+  padding: 4px;
+  text-align: center;
+}
+
+.continent-container{
+  margin-bottom:15px;
+  }
