--- a/TWM/TWM.AngularClient/TWM/src/app/mycountries/my-country-thumbnail/my-country-thumbnail.component.html
+++ b/TWM/TWM.AngularClient/TWM/src/app/mycountries/my-country-thumbnail/my-country-thumbnail.component.html
@@ -2,7 +2,7 @@
 
 
 <img class="left" src="assets/svgmaps/{{country.alpha3Code | lowercase}}.svg">
-<div class="right text">
+<div class="right country-name">
   <p> {{country.name}} </p>
 </div>
 </div>
