--- a/TWM/TWM.AngularClient/TWM/src/app/mycountries/my-country-thumbnail/my-country-thumbnail.component.scss
+++ b/TWM/TWM.AngularClient/TWM/src/app/mycountries/my-country-thumbnail/my-country-thumbnail.component.scss
@@ -14,11 +14,15 @@ img {
 .left {
   float: left;
   padding-left: 3px;
-  margin-right: 6px;
+  margin-right: 9px;
 }
 
 .country-body {
   padding: 0;
   margin: 0;
   overflow: hidden;
+}
+
+.country-name{
+  font-size: 14px;
 }
