--- a/TWM/TWM.AngularClient/TWM/src/app/mycountries/root/root.component.html
+++ b/TWM/TWM.AngularClient/TWM/src/app/mycountries/root/root.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-2">
+        <div class="col-2 column-left">
             <!--<app-my-country-list></app-my-country-list>-->
             <app-my-continent-list></app-my-continent-list>
         </div>
-        <div class="col-10">
+        <div class="col-10 column-right">
             <mdb-accordion>
                 <mdb-accordion-item [collapsed]="false">
                     <mdb-accordion-item-head [customClass]="'blue-text'">Your Personal Map:</mdb-accordion-item-head>
